[package]
name = "gbs"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/saavylab/gbs"
homepage = "https://github.com/SaavyLab/gbs"
description = "Tiny TUI helper to browse and switch local git branches."
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.29.0"
